[gd_scene load_steps=5 format=2]

[ext_resource path="res://ya no/AdivinaQuien.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float lod: hint_range(0.0, 5.0) = 0.0;

void fragment(){
	vec4 color = texture(SCREEN_TEXTURE, SCREEN_UV, lod);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/lod = 3.401

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.0
margin_top = -245.0
margin_right = -10.0
margin_bottom = -45.0
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Blur" type="TextureRect" parent="TextureRect"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 250, 250 )
texture = ExtResource( 2 )
expand = true

[node name="GridContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.0
margin_top = 31.0
margin_right = 410.0
margin_bottom = 251.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2

[node name="ans0" type="Button" parent="GridContainer"]
margin_right = 400.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
rect_pivot_offset = Vector2( 1.413, 0 )

[node name="ans1" type="Button" parent="GridContainer"]
margin_left = 420.0
margin_right = 820.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 100 )
rect_pivot_offset = Vector2( 1.413, 0 )

[node name="ans2" type="Button" parent="GridContainer"]
margin_top = 120.0
margin_right = 400.0
margin_bottom = 220.0
rect_min_size = Vector2( 400, 100 )
rect_pivot_offset = Vector2( 1.413, 0 )

[node name="ans3" type="Button" parent="GridContainer"]
margin_left = 420.0
margin_top = 120.0
margin_right = 820.0
margin_bottom = 220.0
rect_min_size = Vector2( 400, 100 )
rect_pivot_offset = Vector2( 1.413, 0 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -245.0
margin_right = 410.0
margin_bottom = 5.0
rect_min_size = Vector2( 250, 250 )
color = Color( 0.54902, 0.639216, 0.921569, 0.278431 )

[node name="Pregunta_label" type="RichTextLabel" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -104.0
margin_right = 187.0
margin_bottom = 104.0
bbcode_enabled = true

[node name="siguiente" type="Button" parent="."]
margin_left = 931.0
margin_top = 550.0
margin_right = 1010.0
margin_bottom = 586.0
text = "Siguiente"

[connection signal="button_down" from="GridContainer/ans0" to="." method="_on_ans0_button_down"]
[connection signal="button_down" from="GridContainer/ans1" to="." method="_on_ans1_button_down"]
[connection signal="button_down" from="GridContainer/ans2" to="." method="_on_ans2_button_down"]
[connection signal="button_down" from="GridContainer/ans3" to="." method="_on_ans3_button_down"]
[connection signal="button_down" from="siguiente" to="." method="_on_siguiente_button_down"]
